# tinyrenderer-rs

./: .gitignore  Cargo.toml  README.md
output/: checkers.tga
src/: image.rs  linalg.rs  main.rs  tga.rs  wavefront_obj.rs
