[package]
name = "tinyrenderer"
version = "0.1.0"
edition = "2024"

[dependencies]
binrw = "0.15.0"
clap = { version = "4.5.45", features = ["derive"] }
error-iter = "0.4.1"
glam = { version = "0.30.5", features = ["glam-assert"] }
log = "0.4.27"
nom = "8.0.0"
pixels = "0.15.0"
rand = "0.9.2"
winit = "0.30.12"
